setting up code to save in local storage.

--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -1,5 +1,6 @@
-
-<ul>
-  <li class="insert">Insert Row</li>
-  <li class="delete">Delete Row</li>
-<ul>
+<div id="menu">
+    <ul>
+        <li data-action="insert">Insert After</li>
+        <li data-action="delete">Delete</li>
+    </ul>
+</div>
